--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Doeit</string>
     <string name="today">Today</string>
     <string name="task_detail">Task Detail</string>
+    <string name="add_task">Add a task</string>
 </resources>
